This file documents the revision history for Perl extension Catalyst.

5.67   
        - Static::Simple: Unescape the URI path before looking for the file.
          This fixes issues with files that have spaces.
        - Looping and recursion tests plus a fix
        - Added lots of API documentation.
        - Changed default behaviors for $c->model/$c->controller/$c->view
          to more sane settings.
        - added the clear_errors method - an alias for error(0)
        - Added tmpdir option for uploads (woremacx)
        - Applied patch from GEOFFR to allow normal filehandles.

5.66    2006-03-10 17:48:00
        - Added Test::WWW::Mechanize::Catalyst support
        - Cleaned generated tests
        - Added Root controller concept
        - Updated ConfigLoader plugin to version 0.04

5.65    2006-02-21 10:34:00
        - Added plugin introspection.
        - Support optional hashref as last param for parameters in uri_for.
        - Updated tutorial to be more complete.
        - Applied args patch from antirice (Fixes Ticket #67)

5.64    2006-02-07 20:29:00
        - Fixed bug in FastCGI proc manager mode where pm_post_dispatch
          was not run. (Eric Wong)
        - Cleaned up generated tests
        - Updated YAML support to use ConfigLoader
        - Fixed path dispatch to canonicalise correctly
            (see http://dev.catalyst.perl.org/ticket/62)
        - Added Catalyst::Manual::About

5.63    2006-01-22 00:00:00
        - Updated prereq versions

5.62    2006-01-17 16:30:00
        - Large update to the tutorial (castaway)
        - Added YAML config support
        - Added COMPONENT() and ACCEPT_CONTEXT() support
        - Action list in debug mode is now displayed as a tree in the
          correct execution order.
        - Fixed engine detection to allow custom mod_perl engines.
        - Static::Simple: Fixed bug in ignore_dirs under win32.
        - Display version numbers of loaded plugins. (Curtis Poe)